# site

./: .gitignore  Cargo.toml  Justfile
server/: Cargo.toml
server/data/: data.toml
server/src/: main.rs  state.rs  utils.rs
server/src/api/: mod.rs  perlin2d.rs
server/src/pages/: mod.rs  noc.rs  resume.rs
server/templates/: base.html  noc.html
shared/: Cargo.toml
shared/src/: config.rs  lib.rs  noc.rs  noise.rs  resume.rs
shared/src/pages/: mod.rs  noc.rs  resume.rs
shared/src/renderer/: canvas.rs  mod.rs  shapes.rs
shared/templates/: base.html  noc.html  resume.html
src/: main.rs
src/pages/: htmx.rs  mod.rs  resume.rs
templates/: resume.html
wasm/: Cargo.toml
wasm/src/: lib.rs  shapes.rs  sketch.rs  utils.rs
wasm/src/ex/: intro.rs  mod.rs  vectors.rs
