[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
js-sys = "0.3.64"
nalgebra = "0.32.3"
noise = "0.8.2"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "Window",
  "Document",
  "console",
  "ImageData",
]}
